# Classifying-objects-on-conveyor-belt-using-camera

./: .gitignore  .gitmodules  README.md  docker-compose.yml
commander/: CMakeLists.txt  package.xml
commander/keras/: labels.txt  model.h5  model_x.h5  model_y.h5  model_z.h5  x_100samples.h5
commander/launch/: color_detector.launch  launcher.launch  sample_capture.launch  sapmle_capture.launch  shape_detector.launch  start.launch  toy_detection.launch
commander/msg/: image_details_msg.msg  object_info_msg.msg  toy_score_msg.msg
commander/scripts/: .toy_detection.py.swp  color_detector.py  image_capture.py  image_publisher.py  object_classifier.py  shape_detector.py  toy_detection.py
commander/srv/: image_capture_srv.srv
commander/tensorflow/: labels.txt
demo/: Dockerfile
demo/detector/: Dockerfile
demo/simulation/: Dockerfile
html/: index.html
sim_env/: CMakeLists.txt  package.xml
sim_env/launch/: conveyor_belt.launch
sim_env/models/a_sphere/: model.config  model.sdf
sim_env/models/background_wall/: model.config  model.sdf
sim_env/models/bear/: model.config  model.sdf
sim_env/models/blue_pyramid/: model.sdf
sim_env/models/blue_sphere/: model.config  model.sdf
sim_env/models/box/: model.config  model.sdf
sim_env/models/camera/: model.config  model.sdf
sim_env/models/camera/meshes/: model.dae
sim_env/models/camera_x/: model.config  model.sdf
sim_env/models/camera_y/: model.config  model.sdf
sim_env/models/camera_z/: model.config  model.sdf
sim_env/models/car/: model.config  model.sdf
sim_env/models/car/meshes/: model.dae
sim_env/models/conveyor_belt/: model.config  model.sdf
sim_env/models/conveyor_belt/meshes/: y_model.dae
sim_env/models/giraffe/: model.config  model.sdf
sim_env/models/green_pyramid/: model.config  model.sdf
sim_env/models/green_sphere/: model.config  model.sdf
sim_env/models/helicopter/: model.config  model.sdf
sim_env/models/helicopter/meshes/: model.dae
sim_env/models/orange_pyramid/: model.sdf
sim_env/models/orange_sphere/: model.config  model.sdf
sim_env/models/purple_pyramid/: model.sdf
sim_env/models/purple_sphere/: model.config  model.sdf
sim_env/models/pyramid/: model.config  model.sdf
sim_env/models/pyramid/meshes/: model.dae
sim_env/models/red_pyramid/: model.config  model.sdf
sim_env/models/red_sphere/: model.config  model.sdf
sim_env/models/sphere/: model.config  model.sdf
sim_env/models/test/: model.config  model.dae  model.sdf
sim_env/models/train/: model.config  model.sdf
sim_env/models/train/meshes/: model.dae
sim_env/models/yellow_pyramid/: model.sdf
sim_env/models/yellow_pyramid/meshes/: model.dae
sim_env/models/yellow_sphere/: model.config  model.sdf
sim_env/scripts/: object_spawner.py  sample_spawner.py
sim_env/src/: disable_physic.cc  factory.cc  gazebo_ros_camera.cc  model_push.cc
sim_env/worlds/: conveyor_belt.world
